--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           <a class="nav-link" href="#SN">Social Networks</a>
         </li>
         <li class="nav-item dropdown">
-          <a href="#CV" class="nav-link">CV\Résumé English</a>
+          <a href="#CV" class="nav-link">CV\Resumee</a>
         </li>
-        <li>
-          <a href="#CVE" class="nav-link">CV Español</a>
+        <li class="nav-item dropdown">
+          <a href="#projects" class="nav-link">Some of my Projects</a>
         </li>
       </ul>
     </div>
@@ -44,14 +44,14 @@
     </div>
   </div>
   <section id="SN">
-    <h4 class="text-center mt-5">Redes Sociales De Alejandro Rodriguez</h4>
+    <h4 class="text-center mt-5 mb-4 text-secondary">Alejandro's Social Networks</h4>
     <div class="rrss mb-5 mt-3">
       <div class="row">
         <div class="col-md-4 col-sm-12">
           <a href="www.instagram.com" target="_blank">
             <button class="rounded-lg border-info">
               <h6 class="text-info">Instagram</h6>
-              <img src="img/instalogo.png" alt="" width="20%"/>
+              <img src="img/instalogo.png" alt="" width="20%" />
             </button>
           </a>
         </div>
@@ -67,19 +67,59 @@
           <a href="https://github.com/atralex" target="_blank">
             <button class="rounded-lg border-info">
               <h6 class="text-info">GitHub</h6>
-              <img src="img/gitlogo.png" alt="github logo" width="30%"/>
+              <img src="img/gitlogo.png" alt="github logo" width="30%" />
             </button>
           </a>
         </div>
       </div>
     </div>
   </section>
+  <div class="resumen mb-5">
+    <h4 class="text-secondary text-center mb-4">Who am I?</h4>
+    <p>As you can guess, I'm a web developer. Let me tell you about my journey through the web develoment world. <br />
+      My journey started when I was about 14 years old, I took robotics as a subject in the highschool. One of the
+      assignments that I needed to handle, was a robot, capable of following a line drawn in the floor. For the robot to
+      be able to do that, it needed to be programmed. </p>
+  </div>
   <section id="CV">
-
+    <h4 class="text-center text-secondary mt-5 mb-4">Curriculum Vitae</h4>
+    <div class="wrapper">
+      <div class="one">
+        <h4 class="text-center">Español</h4>
+        <a href="pdf/CV Alejandro.pdf" target="_blank">
+          <button class="rounded-lg border-info one">
+            <h6 class="text-info text-center">CV</h6>
+            <img src="img/pdflogo.png" alt="" width="20%" />
+          </button>
+        </a>
+      </div>
+      <div class="two">
+        <h4 class="text-center">English</h4>
+        <a href="pdf/CV Alejandro.pdf" target="_blank">
+          <button class="rounded-lg border-info two">
+            <h6 class="text-info text-center">CV</h6>
+            <img src="img/pdflogo.png" alt="" width="20%" />
+          </button>
+        </a>
+      </div>
+    </div>
   </section>
-  <section id="CVE">
-
+  <section id="projects">
+    
   </section>
+  <footer>
+    <div class="flex-row justify-content-center">
+      <div class="caja">
+        <h5 class="text-center">Email: atralexrg@gmail.com</h5>
+      </div>
+      <div class="caja">
+        <h5 class="text-center">Alejandro Rodríguez González</h5>
+      </div>
+      <div class="caja">
+        <h5 class="text-center">Phone: 633264819</h5>
+      </div>
+    </div>
+  </footer>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
