--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="shortcut icon" href="img/ARG.ico">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" media="only screen and (min-width: 1080px)" href="css/style.css">
+  <link rel="stylesheet" media="only screen and (max-width: 1080px)" href="css/style2.css">
+
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm navbar-light">
+  <nav class="navbar navbar-expand navbar-light">
     <img src="img/ARG.png" alt="" width="50px" />
     <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
       aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +40,7 @@
   <div class="container cabeza">
     <div class="imagen">
       <br />
-      <h3 class="text-black text-center">
+      <h3 class="text-black text-center ml-0">
         Hi, I'm Alejandro Rodríguez González ;)
       </h3>
     </div>
@@ -47,7 +49,7 @@
     <h4 class="text-center mt-5 mb-4 text-secondary">Alejandro's Social Networks</h4>
     <div class="rrss mb-5 mt-3">
       <div class="row">
-        <div class="col-md-4 col-sm-12">
+        <div class="col-md-4 col-xs-12 mt-3">
           <a href="www.instagram.com" target="_blank">
             <button class="rounded-lg border-info">
               <h6 class="text-info">Instagram</h6>
@@ -55,7 +57,7 @@
             </button>
           </a>
         </div>
-        <div class="col-md-4 col-sm-12">
+        <div class="col-md-4 col-xs-12 mt-3">
           <a href="https://twitter.com/home" target="_blank">
             <button class="rounded-lg border-info">
               <h6 class="text-info">Twitter</h6>
@@ -63,7 +65,7 @@
             </button>
           </a>
         </div>
-        <div class="col-md-4 col-sm-12">
+        <div class="col-md-4 col-xs-12 mt-3">
           <a href="https://github.com/atralex" target="_blank">
             <button class="rounded-lg border-info">
               <h6 class="text-info">GitHub</h6>
@@ -105,7 +107,7 @@
     </div>
   </section>
   <section id="projects">
-    
+
   </section>
   <footer>
     <div class="flex-row justify-content-center">
