--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand navbar-light">
+  <nav class="navbar navbar-expand">
     <img src="img/ARG.png" alt="" width="50px" />
     <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
       aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,7 +40,7 @@
   <div class="container cabeza">
     <div class="imagen">
       <br />
-      <h3 class="text-black text-center ml-0">
+      <h3 class="text-black text-center ml-0 animation">
         Hi, I'm Alejandro Rodríguez González ;)
       </h3>
     </div>
@@ -51,24 +51,24 @@
       <div class="row">
         <div class="col-md-4 col-xs-12 mt-3">
           <a href="www.instagram.com" target="_blank">
-            <button class="rounded-lg border-info">
-              <h6 class="text-info">Instagram</h6>
+            <button class="rounded-lg transition">
+              <h6 class="text-info">INSTAGRAM</h6>
               <img src="img/instalogo.png" alt="" width="20%" />
             </button>
           </a>
         </div>
         <div class="col-md-4 col-xs-12 mt-3">
           <a href="https://twitter.com/home" target="_blank">
-            <button class="rounded-lg border-info">
-              <h6 class="text-info">Twitter</h6>
+            <button class="rounded-lg transition">
+              <h6 class="text-info">TWITTER</h6>
               <img src="img/logo.png" alt="" width="20%" a />
             </button>
           </a>
         </div>
         <div class="col-md-4 col-xs-12 mt-3">
           <a href="https://github.com/atralex" target="_blank">
-            <button class="rounded-lg border-info">
-              <h6 class="text-info">GitHub</h6>
+            <button class="rounded-lg transition">
+              <h6 class="text-info">GITHUB</h6>
               <img src="img/gitlogo.png" alt="github logo" width="30%" />
             </button>
           </a>
@@ -89,7 +89,7 @@
       <div class="one">
         <h4 class="text-center">Español</h4>
         <a href="pdf/CV Alejandro.pdf" target="_blank">
-          <button class="rounded-lg border-info one">
+          <button class="rounded-lg one transition">
             <h6 class="text-info text-center">CV</h6>
             <img src="img/pdflogo.png" alt="" width="20%" />
           </button>
@@ -98,7 +98,7 @@
       <div class="two">
         <h4 class="text-center">English</h4>
         <a href="pdf/CV Alejandro.pdf" target="_blank">
-          <button class="rounded-lg border-info two">
+          <button class="rounded-lg two transition">
             <h6 class="text-info text-center">CV</h6>
             <img src="img/pdflogo.png" alt="" width="20%" />
           </button>
