--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
     <div class="collapse navbar-collapse" id="collapsibleNavId">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#SN">Social Networks</a>
+          <h6 class="nav-link mt-1">You can:</h6>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="mailto:atralexrg@gmail.com">Send me an Email</a>
         </li>
         <li class="nav-item dropdown">
-          <a href="#CV" class="nav-link">CV\Resumee</a>
+          <a href="tel:+34633264819" class="nav-link">Call me</a>
         </li>
         <li class="nav-item dropdown">
-          <a href="#projects" class="nav-link">Some of my Projects</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link" href="#" data-toggle="modal" data-target="#contacto">Get in contact</a>
+          <a href="https://wa.me/+34633264819" class="nav-link">Text me via Whatsapp</a>
         </li>
       </ul>
     </div>
@@ -80,8 +80,10 @@
         </div>
       </div>
     </div>
+    <!--Tengo que hacer la animacion para que esto entre desde un lado o se reescale cuando se escrolee a esa altura-->
   </section>
   <div class="resumen mb-5">
+    <br/>
     <h4 class="text-secondary text-center mb-4">Who am I?</h4>
     <div class="parrafo">
       <p>As you can guess, I'm a web developer.
@@ -132,23 +134,6 @@
       </div>
     </div>
   </footer>
-  <div class="modal fade rounded-lg" id="contacto" tabindex="-1" role="dialog" aria-labelledby="modelTitleId"
-        aria-hidden="true">
-        <div class="modal-dialog modal-md" role="document">
-            <div class="modal-content">
-                <div class="modal-header bg-iniciasesion myModalHeader myModalClose">
-                    <h5 class="text-center">Contact with me</h5>
-                </div>
-                <div class="modal-body bg-iniciasesion rounded-lg myModalBody">
-                    <div class="modal-body text-center">
-                      <h6>Send an email: <a href="mailto:atralexrg@gmail.com" class="modallink text-secondary" target="_blank">atralexrg@gmail.com</a></h6>
-                      <h6>Call me at: <a href="tel:+34633264819" class="text-secondary" target="_blank">633 26 48 19</a></h6>
-                      <h6>Or you can text me via WhatsApp by clicking <a href="https://wa.me/+34633264819" class="text-info" target="_blank">here</a></h6>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
   <!-- Optional JavaScript -->
    <script src="js/index.js"></script>
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
