--- a/index.html
+++ b/index.html
@@ -119,7 +119,12 @@
     </div>
   </section>
   <section id="projects">
-
+    <h4 class="text-center text-secondary mt-5 mb-4">Projects/Proyectos</h4>
+    <div class="proyectos">
+      <div class="row">
+        <div class="col"></div>
+      </div>
+    </div>
   </section>
   <footer>
     <div class="flex-row justify-content-center">
